SimplifiedJSSParser.py
# Generated from SimplifiedJSS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimplifiedJSSParser ( Parser ):

    grammarFileName = "SimplifiedJSS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'const'", "'function'", "'class'", 
                     "'constructor'", "'new'", "'this'", "'if'", "'else'", 
                     "'while'", "'for'", "'break'", "'return'", "'void'", 
                     "'int'", "'real'", "'str'", "'bool'", "'true'", "'false'", 
                     "'null'", "'input'", "'console'", "'log'", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'=='", "'!='", "'>='", 
                     "'<='", "'&&'", "'||'", "'++'", "'--'", "'**'", "'='", 
                     "'>'", "'<'", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'.'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONST", "FUNCTION", "CLASS", 
                      "CONSTRUCTOR", "NEW", "THIS", "IF", "ELSE", "WHILE", 
                      "FOR", "BREAK", "RETURN", "VOID", "INT", "REAL", "STR", 
                      "BOOL", "TRUE", "FALSE", "NULL", "INPUT", "CONSOLE", 
                      "LOG", "PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "EQ", "NEQ", "GTE", "LTE", 
                      "AND", "OR", "INC", "DEC", "POW", "ASSIGN", "GT", 
                      "LT", "NOT", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "SEMI", "COMMA", "DOT", "REAL_LITERAL", 
                      "INT_LITERAL", "STRING_LITERAL", "ID", "LINE_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_topLevelDecl = 1
    RULE_varDecl = 2
    RULE_constDecl = 3
    RULE_declaratorList = 4
    RULE_constDeclaratorList = 5
    RULE_declarator = 6
    RULE_constDeclarator = 7
    RULE_type = 8
    RULE_primitiveType = 9
    RULE_arraySuffix = 10
    RULE_functionDecl = 11
    RULE_returnType = 12
    RULE_paramList = 13
    RULE_param = 14
    RULE_classDecl = 15
    RULE_classMember = 16
    RULE_attributeDecl = 17
    RULE_constructorDecl = 18
    RULE_methodDecl = 19
    RULE_block = 20
    RULE_statement = 21
    RULE_ifStmt = 22
    RULE_elseIfPart = 23
    RULE_elsePart = 24
    RULE_whileStmt = 25
    RULE_forStmt = 26
    RULE_forInit = 27
    RULE_varDeclNoSemi = 28
    RULE_breakStmt = 29
    RULE_returnStmt = 30
    RULE_inputStmt = 31
    RULE_consoleLogStmt = 32
    RULE_exprStmt = 33
    RULE_assignableList = 34
    RULE_argumentList = 35
    RULE_expr = 36
    RULE_assignment = 37
    RULE_assignOp = 38
    RULE_logicalOr = 39
    RULE_logicalAnd = 40
    RULE_equality = 41
    RULE_relational = 42
    RULE_additive = 43
    RULE_multiplicative = 44
    RULE_power = 45
    RULE_unary = 46
    RULE_postfix = 47
    RULE_primary = 48
    RULE_newObject = 49
    RULE_functionCall = 50
    RULE_methodCall = 51
    RULE_methodReceiver = 52
    RULE_castCall = 53
    RULE_arrayLiteral = 54
    RULE_assignable = 55
    RULE_assignableBase = 56
    RULE_accessSuffix = 57
    RULE_literal = 58

    ruleNames =  [ "program", "topLevelDecl", "varDecl", "constDecl", "declaratorList", 
                   "constDeclaratorList", "declarator", "constDeclarator", 
                   "type", "primitiveType", "arraySuffix", "functionDecl", 
                   "returnType", "paramList", "param", "classDecl", "classMember", 
                   "attributeDecl", "constructorDecl", "methodDecl", "block", 
                   "statement", "ifStmt", "elseIfPart", "elsePart", "whileStmt", 
                   "forStmt", "forInit", "varDeclNoSemi", "breakStmt", "returnStmt", 
                   "inputStmt", "consoleLogStmt", "exprStmt", "assignableList", 
                   "argumentList", "expr", "assignment", "assignOp", "logicalOr", 
                   "logicalAnd", "equality", "relational", "additive", "multiplicative", 
                   "power", "unary", "postfix", "primary", "newObject", 
                   "functionCall", "methodCall", "methodReceiver", "castCall", 
                   "arrayLiteral", "assignable", "assignableBase", "accessSuffix", 
                   "literal" ]

    EOF = Token.EOF
    LET=1
    CONST=2
    FUNCTION=3
    CLASS=4
    CONSTRUCTOR=5
    NEW=6
    THIS=7
    IF=8
    ELSE=9
    WHILE=10
    FOR=11
    BREAK=12
    RETURN=13
    VOID=14
    INT=15
    REAL=16
    STR=17
    BOOL=18
    TRUE=19
    FALSE=20
    NULL=21
    INPUT=22
    CONSOLE=23
    LOG=24
    PLUS_ASSIGN=25
    MINUS_ASSIGN=26
    MUL_ASSIGN=27
    DIV_ASSIGN=28
    MOD_ASSIGN=29
    EQ=30
    NEQ=31
    GTE=32
    LTE=33
    AND=34
    OR=35
    INC=36
    DEC=37
    POW=38
    ASSIGN=39
    GT=40
    LT=41
    NOT=42
    PLUS=43
    MINUS=44
    MUL=45
    DIV=46
    MOD=47
    LPAREN=48
    RPAREN=49
    LBRACE=50
    RBRACE=51
    LBRACK=52
    RBRACK=53
    SEMI=54
    COMMA=55
    DOT=56
    REAL_LITERAL=57
    INT_LITERAL=58
    STRING_LITERAL=59
    ID=60
    LINE_COMMENT=61
    WS=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimplifiedJSSParser.EOF, 0)

        def topLevelDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJSSParser.TopLevelDeclContext)
            else:
                return self.getTypedRuleContext(SimplifiedJSSParser.TopLevelDeclContext,i)


        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimplifiedJSSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2167669788149530078) != 0):
                self.state = 118
                self.topLevelDecl()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(SimplifiedJSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.FunctionDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.ClassDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.StatementContext,0)


        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_topLevelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDecl" ):
                listener.enterTopLevelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDecl" ):
                listener.exitTopLevelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelDecl" ):
                return visitor.visitTopLevelDecl(self)
            else:
                return visitor.visitChildren(self)




    def topLevelDecl(self):

        localctx = SimplifiedJSSParser.TopLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelDecl)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.functionDecl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.classDecl()
                pass
            elif token in [1, 2, 6, 7, 8, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21, 22, 23, 36, 37, 42, 43, 44, 48, 50, 52, 57, 58, 59, 60]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(SimplifiedJSSParser.LET, 0)

        def type_(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.TypeContext,0)


        def declaratorList(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.DeclaratorListContext,0)


        def SEMI(self):
            return self.getToken(SimplifiedJSSParser.SEMI, 0)

        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = SimplifiedJSSParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(SimplifiedJSSParser.LET)
            self.state = 132
            self.type_()
            self.state = 133
            self.declaratorList()
            self.state = 134
            self.match(SimplifiedJSSParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(SimplifiedJSSParser.CONST, 0)

        def type_(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.TypeContext,0)


        def constDeclaratorList(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.ConstDeclaratorListContext,0)


        def SEMI(self):
            return self.getToken(SimplifiedJSSParser.SEMI, 0)

        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = SimplifiedJSSParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(SimplifiedJSSParser.CONST)
            self.state = 137
            self.type_()
            self.state = 138
            self.constDeclaratorList()
            self.state = 139
            self.match(SimplifiedJSSParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJSSParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(SimplifiedJSSParser.DeclaratorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimplifiedJSSParser.COMMA)
            else:
                return self.getToken(SimplifiedJSSParser.COMMA, i)

        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_declaratorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaratorList" ):
                listener.enterDeclaratorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaratorList" ):
                listener.exitDeclaratorList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaratorList" ):
                return visitor.visitDeclaratorList(self)
            else:
                return visitor.visitChildren(self)




    def declaratorList(self):

        localctx = SimplifiedJSSParser.DeclaratorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaratorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.declarator()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==55:
                self.state = 142
                self.match(SimplifiedJSSParser.COMMA)
                self.state = 143
                self.declarator()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclaratorListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constDeclarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJSSParser.ConstDeclaratorContext)
            else:
                return self.getTypedRuleContext(SimplifiedJSSParser.ConstDeclaratorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimplifiedJSSParser.COMMA)
            else:
                return self.getToken(SimplifiedJSSParser.COMMA, i)

        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_constDeclaratorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaratorList" ):
                listener.enterConstDeclaratorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaratorList" ):
                listener.exitConstDeclaratorList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclaratorList" ):
                return visitor.visitConstDeclaratorList(self)
            else:
                return visitor.visitChildren(self)




    def constDeclaratorList(self):

        localctx = SimplifiedJSSParser.ConstDeclaratorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constDeclaratorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.constDeclarator()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==55:
                self.state = 150
                self.match(SimplifiedJSSParser.COMMA)
                self.state = 151
                self.constDeclarator()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimplifiedJSSParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(SimplifiedJSSParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.ExprContext,0)


        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarator" ):
                listener.exitDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarator" ):
                return visitor.visitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def declarator(self):

        localctx = SimplifiedJSSParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(SimplifiedJSSParser.ID)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 158
                self.match(SimplifiedJSSParser.ASSIGN)
                self.state = 159
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimplifiedJSSParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(SimplifiedJSSParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.ExprContext,0)


        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_constDeclarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclarator" ):
                listener.enterConstDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclarator" ):
                listener.exitConstDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclarator" ):
                return visitor.visitConstDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def constDeclarator(self):

        localctx = SimplifiedJSSParser.ConstDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constDeclarator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(SimplifiedJSSParser.ID)
            self.state = 163
            self.match(SimplifiedJSSParser.ASSIGN)
            self.state = 164
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(SimplifiedJSSParser.PrimitiveTypeContext,0)


        def arraySuffix(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplifiedJSSParser.ArraySuffixContext)
            else:
                return self.getTypedRuleContext(SimplifiedJSSParser.ArraySuffixContext,i)


        def ID(self):
            return self.getToken(SimplifiedJSSParser.ID, 0)

        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = SimplifiedJSSParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15, 16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.primitiveType()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==52:
                    self.state = 167
                    self.arraySuffix()
                    self.state = 172
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [60]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(SimplifiedJSSParser.ID)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==52:
                    self.state = 174
                    self.arraySuffix()
                    self.state = 179
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SimplifiedJSSParser.INT, 0)

        def REAL(self):
            return self.getToken(SimplifiedJSSParser.REAL, 0)

        def STR(self):
            return self.getToken(SimplifiedJSSParser.STR, 0)

        def BOOL(self):
            return self.getToken(SimplifiedJSSParser.BOOL, 0)

        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_primitiveType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveType" ):
                return visitor.visitPrimitiveType(self)
            else:
                return visitor.visitChildren(self)




    def primitiveType(self):

        localctx = SimplifiedJSSParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(SimplifiedJSSParser.LBRACK, 0)

        def INT_LITERAL(self):
            return self.getToken(SimplifiedJSSParser.INT_LITERAL, 0)

        def RBRACK(self):
            return self.getToken(SimplifiedJSSParser.RBRACK, 0)

        def getRuleIndex(self):
            return SimplifiedJSSParser.RULE_arraySuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySuffix" ):
                listener.enterArraySuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySuffix" ):
                listener.exitArraySuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraySuffix" ):
                return visitor.visitArraySuffix(self)
            else:
                return visitor.visitChildren(self)




    def arraySuffix(self):

        localctx = SimplifiedJSSParser.ArraySuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arraySuffix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(SimplifiedJSSParser.LBRACK)
            self.state = 185
            self.match(SimplifiedJSSParser.INT_LITERAL)
            self.state = 186
            self.match(SimplifiedJSSParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

